--- a/assets/fonts/demo.html
+++ b/assets/fonts/demo.html
@@ -220,6 +220,10 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
       <path d="m110 128c0-10-4-19-11-26-7-7-16-11-26-11-10 0-19 4-26 11-7 7-10 16-10 26 0 10 3 19 10 26 7 7 16 11 26 11 10 0 19-4 26-11 7-7 11-16 11-26z m305 165c0 10-4 18-11 25l-140 141c-8 7-16 10-26 10-10 0-19-3-26-10l-204-205c-8-7-14-16-19-29-5-12-7-23-7-33l0-119c0-10 3-18 11-26 7-7 15-10 25-10l119 0c10 0 21 2 34 7 12 5 21 11 29 19l204 204c7 7 11 16 11 26z m109 0c0 10-3 18-10 25l-141 141c-7 7-16 10-26 10-6 0-12-1-16-4-5-2-10-7-16-12l135-135c7-7 10-15 10-25 0-10-3-19-10-26l-205-204c-7-8-17-14-29-19-12-5-23-7-33-7l64 0c10 0 21 2 33 7 12 5 22 11 29 19l205 204c7 7 10 16 10 26z"/>
     </symbol>
   
+    <symbol id="icon-link" viewBox="0 0 512 512">
+      <path d="m434 347c0-7-2-14-8-19l-59-59c-5-6-12-8-20-8-8 0-14 3-20 9 0 0 2 2 5 5 3 3 5 5 6 6 1 1 3 3 5 6 2 2 3 4 3 7 1 2 1 5 1 8 0 7-2 14-8 19-5 5-11 8-19 8-3 0-5 0-8-1-2-1-5-2-7-4-3-1-4-3-6-4-1-1-3-3-6-6-3-3-4-5-5-5-6 5-9 12-9 20 0 8 2 15 8 20l58 59c6 5 12 8 20 8 7 0 14-3 19-8l42-41c6-6 8-12 8-20z m-201-201c0-8-2-14-8-19l-58-60c-6-5-12-8-20-8-7 0-14 3-19 8l-42 42c-6 5-8 12-8 19 0 8 2 14 8 19l59 60c5 5 12 8 20 8 8 0 14-3 20-9 0-1-2-3-5-6-3-3-5-5-6-6-1-1-3-3-5-5-2-3-3-5-3-7-1-3-1-5-1-8 0-8 2-14 8-20 5-5 11-8 19-8 3 0 5 1 8 1 2 1 5 2 7 4 3 2 4 3 6 4 1 1 3 3 6 6 3 3 4 5 5 6 6-6 9-13 9-21z m256 201c0 23-8 43-24 58l-42 42c-16 16-35 24-58 24-23 0-43-8-58-24l-59-60c-16-15-24-35-24-58 0-23 8-43 25-59l-25-25c-16 16-36 25-59 25-23 0-43-8-59-24l-59-60c-16-16-24-35-24-58 0-23 8-42 24-58l42-42c16-16 35-23 58-23 23 0 43 8 58 24l59 59c16 16 24 35 24 58 0 23-8 43-25 60l25 25c16-17 36-25 59-25 23 0 43 8 59 24l59 59c16 16 24 36 24 58z"/>
+    </symbol>
+  
 </svg>
 
 
@@ -275,6 +279,14 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
       </svg>
 
       <input type="text" readonly="readonly" value='<svg class="icon-tags"><use xlink:href="#icon-tags"></use></svg>'>
+    </li>
+    
+    <li>
+      <svg class="icon-link">
+        <use xlink:href="#icon-link"></use>
+      </svg>
+
+      <input type="text" readonly="readonly" value='<svg class="icon-link"><use xlink:href="#icon-link"></use></svg>'>
     </li>
     
   </ul>
